# Income-Divider

./: Cargo.toml
src/: main.rs
ui/: appwindow.slint
